frontend/deploy/kustomize/components/landing/landing_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinner-done-better-landing-deployment
  labels:
    app: dinner-done-better-landing
    app.kubernetes.io/name: dinner-done-better-landing-app
spec:
  selector:
    matchLabels:
      app: dinner-done-better-landing
      app.kubernetes.io/name: dinner-done-better-landing-app
  replicas: 1
  template:
    metadata:
      labels:
        app: dinner-done-better-landing
        app.kubernetes.io/name: dinner-done-better-landing-app
    spec:
      containers:
        - name: dinner-done-better-landing
          image: dinner-done-better-landing
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
              name: http
          resources:
            requests:
              cpu: "128m"
              memory: "64Mi"
            limits:
              cpu: "256m"
              memory: "128Mi"
#        livenessProbe:
#          httpGet:
#            path: "/api/_ops_/live"
#            port: 60000
#          initialDelaySeconds: 15
#          periodSeconds: 32
#        readinessProbe:
#          httpGet:
#            path: "/api/_ops_/ready"
#            port: 60000
#          initialDelaySeconds: 15
#          periodSeconds: 3
---
