frontend/deploy/kustomize/components/landing/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dinner-done-better-landing-svc
  labels:
    app.kubernetes.io/name: dinner-done-better-landing-app
spec:
  selector:
    app.kubernetes.io/name: dinner-done-better-landing-app
  ports:
  - name: http
    port: 10000
    protocol: TCP
    targetPort: http
  type: ClusterIP
---
