frontend/deploy/kustomize/components/landing/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dinner-done-better-landing-ingress
  labels:
    app.kubernetes.io/name: dinner-done-better-landing-app
spec:
  rules:
  - host: landing-server.k8s
    http:
      paths:
      - backend:
          service:
            name: dinner-done-better-landing-svc
            port:
              number: 10000
        path: /
        pathType: ImplementationSpecific
---
